--- a/frontend/src/app/pages/devices/devices-list.component.html
+++ b/frontend/src/app/pages/devices/devices-list.component.html
@@ -78,6 +78,7 @@
             icon="pi pi-plus"
             [styleClass]="'p-button-primary w-full'"
             routerLink="/devices/new"
+            [disabled]="!(isAdmin$ | async)"
           >
           </p-button>
         </div>
@@ -247,6 +248,7 @@
                   (click)="confirmDelete(device)"
                   [pTooltip]="'common.delete' | translate"
                   tooltipPosition="top"
+                  [disabled]="!(isAdmin$ | async)"
                 >
                 </p-button>
               </div>
