--- a/frontend/src/app/pages/categories/categories-list.component.html
+++ b/frontend/src/app/pages/categories/categories-list.component.html
@@ -41,8 +41,7 @@
             [label]="'categories.newCategory' | translate"
             icon="pi pi-plus"
             [styleClass]="'p-button-primary w-full'"
-            routerLink="/categories/new"
-            [disabled]="!(isAdmin$ | async)">
+            routerLink="/categories/new">
           </p-button>
         </div>
         <div class="w-full md:w-auto [&_.p-button]:w-full">
@@ -163,16 +162,14 @@
                   [styleClass]="'p-button-outlined p-button-sm'"
                   [routerLink]="['/categories', category.id, 'edit']"
                   [pTooltip]="'common.edit' | translate"
-                  tooltipPosition="top"
-                  [disabled]="!(isAdmin$ | async)">
+                  tooltipPosition="top">
                 </p-button>
                 <p-button
                   icon="pi pi-trash"
                   [styleClass]="'p-button-danger p-button-outlined p-button-sm'"
                   (click)="confirmDelete(category)"
                   [pTooltip]="'common.delete' | translate"
-                  tooltipPosition="top"
-                  [disabled]="!(isAdmin$ | async)">
+                  tooltipPosition="top">
                 </p-button>
               </div>
             </td>
